--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
@@ -2,7 +2,8 @@
 .mainDiv {
     height: auto;
     position: absolute;
-    top: 8%;
+    // top: 8%;
+    top: 78px;
     left: 0;
     right: 0;
     bottom: 100px;
