--- a/application/clients/desktopV2/src/app/signup/signup.component.scss
+++ b/application/clients/desktopV2/src/app/signup/signup.component.scss
@@ -20,6 +20,16 @@ img {
     padding-top: 30%;
 }
 
+#eye_icon {
+    float: right;
+    margin-right: 15px;
+    margin-top: -67px;
+    position: relative;
+    z-index: 2;
+    font-size: 30px;
+    cursor: pointer;
+}
+
 #i39ya {
     text-align: center;
     font-family: Montserrat, sans-serif;
