--- a/generator/services/auth-gen-manager/template/gcamresources.handlebars
+++ b/generator/services/auth-gen-manager/template/gcamresources.handlebars
@@ -227,6 +227,45 @@ export const resource_types = [
     }
     ]
   },
+  ,
+  {
+    "resource_name": "managecontrol",
+    "resource_type": "screen",
+    "roles": [
+      "admin"
+    ],
+    "components": [{
+      "label_1425":
+      {
+        "id": "878979",
+        "roles": [
+          "admin"
+        ]
+      },
+      "textbox_6272":
+      {
+        "id": "135979",
+        "roles": [
+          "admin"
+        ]
+      },
+      "label_2437":
+      {
+        "id": "343979",
+        "roles": [
+          "admin"
+        ]
+      },
+      "dropdown_73821":
+      {
+        "id": "738291",
+        "roles": [
+          "admin"
+        ]
+      }
+    }
+    ]
+  },
   {
     "resource_name": "usermanagement",
     "resource_type": "screen",
