--- a/generator/services/seed/admin/admin.component.html
+++ b/generator/services/seed/admin/admin.component.html
@@ -20,9 +20,10 @@
                                 <div id="i0mp2f" class="cell gpd-clm">
                                     <div id="i652ij" class="gdp-row gpd-grid">
 
-                                        <div id="iojftr" class="cell gpd-clm"><img src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/8c3c80b2b8bf47fe891dc0fef071b903_group_2885.png" id="il96fe" /> </div>
+                                        <div id="iojftr" class="cell gpd-clm">
+                                            <img src="https://cdn.grapedrop.com/u5129d9550ab64e5a8a9dd4793644e5e7/135eec99369d41f6b9617dc5c9327db0_qa.png" id="we45hg" /> </div>
                                         <div id="ivdiuk" class="cell gpd-clm">
-                                            <div id="ic8nue" class="gpd-text" (click)="navigate()">User
+                                            <div id="ic8nue" class="gpd-text" [routerLink]="['/managecontrol']">User
                                             </div>
                                             <div id="ifdjor" class="gpd-text">Management
                                             </div>
@@ -47,44 +48,6 @@
                                             <div id="i8c31a" class="gpd-text">Security
                                             </div>
                                             <div id="ilhgzk" class="gpd-text">Manager
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cell gpd-clm">
-                            <div id="ig75jo" class="gdp-row gpd-grid">
-                                <div id="i0mp2f" class="cell gpd-clm">
-                                    <div id="i652ij" class="gdp-row gpd-grid">
-
-                                        <div id="iojftr" class="cell gpd-clm"><img src="https://cdn.grapedrop.com/u5129d9550ab64e5a8a9dd4793644e5e7/e5c2c5860d5d4673880361f037a6a9c5_manager.png" id="we45hg" /> </div>
-                                        <div id="ivdiuk" class="cell gpd-clm">
-                                            <div id="ic8nue" class="gpd-text" [routerLink]="['/authorization']">Authorization
-                                            </div>
-                                            <div id="ifdjor" class="gpd-text">Management
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="ic1ccr" class="cell gpd-clm">
-                                    <div id="iemrh7" class="gdp-row gpd-grid">
-                                        <div id="i7trrs" class="cell gpd-clm"><img src="https://cdn.grapedrop.com/u5129d9550ab64e5a8a9dd4793644e5e7/7e975b90da5e4b4e9139e8f62471b2f3_man.png" id="we45hg" /></div>
-                                        <div id="ivt7k8" class="cell gpd-clm">
-                                            <div id="ifs5g7" class="gpd-text" [routerLink]="['/manageroles']">Roles
-                                            </div>
-                                            <div id="iiq5zm" class="gpd-text">Management
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="i77jpi" class="cell gpd-clm">
-                                    <div id="i12mn9" class="gdp-row gpd-grid">
-                                        <div id="i7j9ef" class="cell gpd-clm"><img src="https://cdn.grapedrop.com/u5129d9550ab64e5a8a9dd4793644e5e7/980b760bbd8a4dab8d7b6ce0932e8bf1_settings.png" id="we45hg" /></div>
-                                        <div id="i23znz" class="cell gpd-clm">
-                                            <div id="i8c31a" class="gpd-text" [routerLink]="['/manageusers']">Users
-                                            </div>
-                                            <div id="ilhgzk" class="gpd-text">Management
                                             </div>
                                         </div>
                                     </div>
