--- a/application/clients/desktopV2/src/app/project/project.component.html
+++ b/application/clients/desktopV2/src/app/project/project.component.html
@@ -23,7 +23,7 @@
                                 <mat-icon>edit</mat-icon> <span style="font-size: 26px">Edit</span>
                             </div>
                         </div>
-                        <div class="card_image" style="background: url('{{proj.app_ui_template_img}}');">
+                        <div class="card"><img alt="Card image cap" class="card-img-top img-fluid" src="{{proj.app_ui_template_img}}" />
                             <div class="container" style="position: absolute;top:165px">
                                 <div class="row">
                                     <div class="col-lg-12">
