--- a/application/clients/desktopV2/src/app/project/project.component.scss
+++ b/application/clients/desktopV2/src/app/project/project.component.scss
@@ -110,6 +110,14 @@
     border-top-right-radius: 3%;
 }
 
+.card-img-top {
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+}
+
 .select_template_image {
     padding: auto;
     background-repeat: no-repeat;
@@ -170,6 +178,13 @@
     }
     #i0tse {
         font-size: 16px;
+    }
+    .card-img-top {
+        border-top-left-radius: 2%;
+        border-top-right-radius: 2%;
+        width: 100%;
+        height: 90vw;
+        object-fit: cover;
     }
 }
 
