--- a/generator/services/Angular-gen-ManagerV12/templates/ComponentService.handlebars
+++ b/generator/services/Angular-gen-ManagerV12/templates/ComponentService.handlebars
@@ -17,7 +17,7 @@ export class {{ GpOptions.className }} {
     ) { }
 
   {{#each GpCodeToAdd.flows_info }}
-    {{ methodName }}({{ paramName }}): Observable<any> {
+    {{ methodName }}({{ paramName }}:any): Observable<any> {
         {{{ body }}}
     }
   {{/each}}
