--- a/generator/services/Angular-gen-ManagerV13/templates/ComponentService.handlebars
+++ b/generator/services/Angular-gen-ManagerV13/templates/ComponentService.handlebars
@@ -17,7 +17,7 @@ export class {{ GpOptions.className }} {
     ) { }
 
   {{#each GpCodeToAdd.flows_info }}
-    {{ methodName }}({{ paramName }}:any): Observable<any> {
+    {{ methodName }}({{#if paramName }}{{ paramName }}:any{{/if}}): Observable<any> {
         {{{ body }}}
     }
   {{/each}}
