base gcam update with service api call

--- a/generator/services/seffrontendmanager/templates/ComponentTs.handlebars
+++ b/generator/services/seffrontendmanager/templates/ComponentTs.handlebars
@@ -62,7 +62,7 @@ export class {{ GpOptions.className }} implements OnInit {
     ngOnInit() {
         {{#if GpOptions.entities}}
         {{#each GpOptions.entities}}
-        this.{{ name }}.created_by = sessionStorage.getItem('email') || null; 
+        this.{{ name }}.created_by = sessionStorage.getItem('email') || ''; 
         {{/each}}
         {{/if}}
         {{#ifCond GpOptions.featureName '===' 'systementry'}}
