--- a/generator/services/seed/AngularV12/user/profilesettings/profilesettings.component.scss
+++ b/generator/services/seed/AngularV12/user/profilesettings/profilesettings.component.scss
@@ -6,6 +6,17 @@ button{
     margin-right: 20px;    
 }
 .label{
-    font-weight: normal;
-    color: black !important;
-}
+    margin: 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+  }
+   select {
+    margin: 0;
+    font-family: inherit;
+    font-size: 1rem;
+    line-height: inherit;
+  }
