few changes updated

--- a/application/clients/desktopV2/src/assets/css/template/newgeppetto-template.css
+++ b/application/clients/desktopV2/src/assets/css/template/newgeppetto-template.css
@@ -49,6 +49,7 @@ body {
 
 .label {
     color: black;
+    font-size: 16px;
 }
 
 .form {
@@ -87,14 +88,6 @@ body {
 
 .h6 {
     color: "black"
-}
-
-.h2 {
-    color: "red"
-}
-
-.h2 {
-    color: "red"
 }
 
 .table {
