--- a/generator/services/Angular-Template-managerV13/templates/Dockerfile.handlebars
+++ b/generator/services/Angular-Template-managerV13/templates/Dockerfile.handlebars
@@ -3,7 +3,7 @@ COPY . /app
 WORKDIR /app
 RUN npm install --save node-sass@4.14.1 --unsafe-perm=true --allow-root
 RUN npm install
-RUN npm install --save @ng-select/ng-select
+RUN npm install --save @ng-select/ng-select@8.1.1
 RUN npm install --save angular-6-social-login
 RUN npm install -g @angular/cli@13.0.3
 RUN npm install -g serve
