--- a/generator/services/Angular-Template-managerV13/templates/SharedService.handlebars
+++ b/generator/services/Angular-Template-managerV13/templates/SharedService.handlebars
@@ -6,7 +6,7 @@ export class SharedService {
 
      public DESKTOP_API = environment.DESKTOP_API;
     public MOBILE_API = environment.MOBILE_API;
-    PUBLIC UPLOAD_API = environment.UPLOAD_API;
+    public UPLOAD_API = environment.UPLOAD_API;
     
 }
   
