--- a/generator/services/seed/AngularV12/user/profilesettings/profilesettings.component.scss
+++ b/generator/services/seed/AngularV12/user/profilesettings/profilesettings.component.scss
@@ -8,7 +8,7 @@ button{
 .label{
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -17,6 +17,6 @@ button{
    select {
     margin: 0;
     font-family: inherit;
-    font-size: 1rem;
+    font-size: 16px;
     line-height: inherit;
   }
