--- a/generator/services/Angular-Template-managerV13/templates/SharedService.handlebars
+++ b/generator/services/Angular-Template-managerV13/templates/SharedService.handlebars
@@ -5,6 +5,7 @@ import { environment } from '../environments/environment';
 export class SharedService {
 
      public DESKTOP_API = environment.DESKTOP_API;
+     public UPLOAD_API = environment.UPLOAD_API;
     public MOBILE_API = environment.MOBILE_API;
 }
   
