--- a/generator/services/seed/AngularV12/user/profilesettings/profilesettings.component.html
+++ b/generator/services/seed/AngularV12/user/profilesettings/profilesettings.component.html
@@ -20,13 +20,13 @@
                 </div>
             </div>
         </div>
-            <!-- <div class="col-sm-6">
+        <!-- <div class="col-sm-6">
                 <div class="form-group">
                     <label class="label"><strong>Password</strong></label>
                     <input type="text" readonly class="form-control" placeholder="Password" [(ngModel)]='Userobject.password' name="password">
                 </div>
             </div> -->
-            <div class="row">
+        <div class="row">
             <div class="col-sm-4">
                 <div class="form-group">
                     <label class="label"><strong>Email</strong></label>
@@ -34,26 +34,26 @@
                 </div>
             </div>
             <div class="col-sm-4">
-              <div class="form-group">
-                 <label class="label"><strong>Profile Pic</strong></label>
-                   <input type="image" type="file" class="form-control" placeholder="Photo"  name="image"> 
-              </div>
+                <div class="form-group">
+                    <label class="label"><strong>Profile Pic</strong></label>
+                    <input type="image" type="file" class="form-control" placeholder="Photo" name="avatar" (change)="onFileSelected($event)" accept="image/png, image/gif, image/jpeg">
+                </div>
             </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-6">
-                 <div class="form-group">
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
                     <label class="label"><strong>Role</strong></label>
                     <select class="form-select" (change)="onChange($event)"> 
-                      <option  selected>Select Roles</option>   
+                    <option selected>select options</option>
                       <option *ngFor="let rolevalue of roles">{{rolevalue.role}}</option>
                     </select>
-                </div> 
-            </div>  
+                </div>
+            </div>
             <div class="col-sm-6">
                 <button type="submit" class="btn btn-primary" (click)="Updateuser()">Save</button>&nbsp;&nbsp;
                 <button type="submit" class="btn btn-primary" (click)="cancle()">cancel</button>
             </div>
-            </div>
+        </div>
     </form>
-  </div>
+</div>
